--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "bootstrap": "^5.3.1",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
