--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@sentry/react": "^7.72.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.1",
     "joi-browser": "^13.4.0",
@@ -22,6 +24,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
