--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.1",
     "joi-browser": "^13.4.0",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "query-string": "^8.1.0",
